// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaskedInput /> <MaskedInput.time /> renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is="input"
  keepCharPositions={true}
  mask={
    Array [
      /\\[0-2\\]/,
      /\\[0-9\\]/,
      ":",
      /\\[0-6\\]/,
      /\\[0-9\\]/,
      " AEST",
    ]
  }
  placeholder="00:00 AEST"
  placeholderChar=" "
  render={[Function]}
/>
`;

exports[`<MaskedInput /> renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  id="postcode"
  is="input"
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
    ]
  }
  placeholder="Enter postcode"
  render={[Function]}
/>
`;
